extended records as well; admit "r" as field name;

* HOL/ex: new theory Factorization proving the Fundamental Theorem of
Arithmetic, by Thomas M Rasmussen;

* HOL/ex/Multiquote: multiple nested quotations and anti-quotations --
basically a generalized version of de-Bruijn representation; very
useful in avoiding lifting all operations;

* new version of "case_tac" subsumes both boolean case split and
"exhaust_tac" on datatypes; INCOMPATIBILITY: exhaust_tac no longer
exists, may define val exhaust_tac = case_tac for ad-hoc portability;

* simplification no longer dives into case-expressions: only the selector
expression is simplified, but not the remaining arms. To enable full
simplification of case-expressions for datatype t, you need to remove
t.weak_case_cong from the simpset, either permanently
(Delcongs[thm"t.weak_case_cong"];) or locally (delcongs [...]).

* the recursion equations generated by 'recdef' for function 'f' are
now called f.simps instead of f.rules; if all termination conditions
are proved automatically, these simplification rules are added to the
simpset, as in primrec; rules may be named individually as well,
resulting in a separate list of theorems for each equation;


*** General ***

* improved name spaces: ambiguous output is qualified; support for
hiding of names;

* compression of ML heaps images may now be controlled via -c option
of isabelle and isatool usedir (currently only observed by Poly/ML);

* ML: new combinators |>> and |>>> for incremental transformations
with secondary results (e.g. certain theory extensions):



New in Isabelle99 (October 1999)
--------------------------------

*** Overview of INCOMPATIBILITIES (see below for more details) ***

* HOL: The THEN and ELSE parts of conditional expressions (if P then x else y)
are no longer simplified.  (This allows the simplifier to unfold recursive
functional programs.)  To restore the old behaviour, declare

    Delcongs [if_weak_cong];
